<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/saveEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save_event"
        app:icon="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CalendarView
        android:id="@+id/calendarView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioPeriodStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/period_start" />

            <RadioButton
                android:id="@+id/radioPeriodStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/period_end" />

            <RadioButton
                android:id="@+id/radioPainkiller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/painkiller" />

            <RadioButton
                android:id="@+id/radioTampon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tampon" />

            <RadioButton
                android:id="@+id/radioPregnantStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregnancy_start" />

            <RadioButton
                android:id="@+id/radioPregnantStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregnancy_stop" />

        </RadioGroup>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/editTextTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="none"
        android:text="@string/_12_00_pm"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView2" />


</androidx.constraintlayout.widget.ConstraintLayout>